Revise availability text and line break formatting
Updated availability details and fixed line breaks.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@
           contribute my skills, professionalism, and positive energy. I’m available mornings, weekdays, and weekends,
           with flexible scheduling to meet your needs.
 
-          <br> <br>
+          <br><br>
+
+          I am available whenever.  In looking for a part time job, that's when I am available.  Working from home, though, I am able to do anything for someone at anytime. 
+
+          <br> 
 
         <h3>Contact Me</h3>
 
