--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </p>
 
           <div class="headshot">
-            <img src="images/hero-headshot.png" alt="Terri headshot">
+            <img src="images/TERRI_01.jpg" alt="Terri headshot">
           </div>
 
           <div class="links">
